########################
Nagios Core 4 Change Log
########################

4.5.4 - 2024-XX-XX
------------------
* Fix inconsistent links for 'View {Trends,Alert Histogram} For This {Host,Service}' (Mauricio Faria de Oliveira)

4.5.3 - 2024-06-11 
------------------
* Update jQuery (#960) (Dylan Anderson)   
* Remove pages using outdated AngularJS framework (#960) (Dylan Anderson)
* Fix html encoding of some ascii characters (#813) (Dylan Anderson)
* Updated several page links to use 'nofollow' (#965) - (Griffin Westerman)

4.5.2 - 2024-04-30
------------------
* Fix handling of timeperiods w/ downtime availability calculations in the Availability CGI report (Sebastian Wolf)
* Fix build when compiling against musl libc (#952) (Sebastian Wolf)
* Fix downtime comment using current time instead of the downtime's entry time (#910) (Dylan Anderson)

4.5.1 - 2024-02-28
-------------------
* Fix text rendering in Configuration -> Command Expansion when the command ends in whitespace (Thanks Joran LEREEC for reporting this issue) (Dylan Anderson) 

4.5.0 - 2023-11-16
-------------------
Note: this release is backward-compatible, but does include updates to the header files.
If you are using any NEB modules in your monitoring solution, you will need to recompile them with the new nagios-4.5.0 headers to avoid segmentation faults.
ENHANCEMENTS
* Add event_handler_period configuration option to hosts and services (#913) (Dylan Anderson)
* Add external commands CHANGE_HOST_EVENT_HANDLER_TIMEPERIOD and CHANGE_SVC_EVENT_HANDLER_TIMEPERIOD (#913) (Dylan Anderson)
* Added support for separating your build directory from your source directory (#867) (Doug Nazar)

4.4.14 - 2023-08-01
-------------------
* Fix missing macros when running performance data commands (#904) (Doug Nazar)

4.4.13 - 2023-06-01
-------------------
FIXES
* Fix broken logo images in status pages (regression from 4.4.12) (#917) (Harbie34)

4.4.12 - 2023-05-30
-------------------
FIXES