@@ -5,6 +5,7 @@ Nagios Core 4 Change Log
 4.5.4 - 2024-XX-XX
 ------------------
 * Fix inconsistent links for 'View {Trends,Alert Histogram} For This {Host,Service}' (Mauricio Faria de Oliveira)
+* Fix broken links from removing AngularJS pages in 4.5.3 (Dylan Anderson)
 
 4.5.3 - 2024-06-11 
 ------------------
